fix problem with input header/divider that covers the element underneath

--- a/desktop/css/custom.css
+++ b/desktop/css/custom.css
@@ -263,6 +263,7 @@ textarea {
 }
 
 .invisible-form-input {
+  appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
   border: 0px;
@@ -466,4 +467,8 @@ textarea {
 
 .default-display .modal-body {
   user-select: none;
+}
+
+.divider {
+  position: static;
 }
